resources/css/style.css
/* Universal Styles */

html, body {
  font-family: Helvetica, sans-serif;
  font-size: 14px;
  text-align: left;
  color: white;
  background-color: black;
  width: 100%;
}


/* Header */


header {
  display: flex;
  align-items: center;
  width: 100%;
  height: 75px;
  padding: 0% 20%;

}

header .logo-icon {
  display: inline-flex;
  width: 25px;
  height: 25px;
  padding: 25px 25px 25px 0px;

}

header .logo-text  {
  display: inline-flex;
  text-transform: uppercase;
}


/* Main Banner */


.main-banner {
  display: flex;
  width: 100%;
  height: 400px;
  padding: 0 20%;
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/moto.jpeg);
  background-repeat: no-repeat;
  background-size: cover;
  align-items: center;
}

.main-banner .content {
  display: flex;
  flex-wrap: wrap;
  max-width: 40%;
  height: auto;
  padding: 10% 5% 10% 5%;
  background-color: black;

}

.main-banner .content h2 {
  display: inline-flex;
  width: 100%;
  padding-bottom: 20px;
  text-transform: uppercase;
}

.main-banner .content h1 {
  display: inline-flex;
  width: 100%;
  text-transform: uppercase;
  font-size: 32px;
  line-height: 40px;
}


/* Navigation */


nav ul {
  display: flex;
  justify-content: space-between;
  width: 100%;
  max-height: 40px;
  padding: 20px 20% 20px 20%;
  background-color: darkred;

}

nav li {
  display: inline-flex;
  align-content: space-between;
  height: auto;
}


/* Product Grid */


.product-grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 390px;
  padding: 40px 20%;
  background-color: white;
}

.grid-item {
  display: flex;
  flex-wrap: wrap;
  max-width: 300px;
  max-height: 350px;
  border: 5px solid black;
  text-align: center;
}

.grid-item .image-wrapper {
  display: inline-flex;
  flex-wrap: wrap;
  align-items: center;
  width: 300px;
  height: 300px;
}

.grid-item img {
  display: inline-flex;
  padding: 20% 20%;
}

.grid-item h2 {
  display: inline-flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 50px;
  background-color: black;
}

